fix overflow issues

--- a/website/source/stylesheets/_view.scss
+++ b/website/source/stylesheets/_view.scss
@@ -9,6 +9,8 @@ html {
 
 body {
   margin: 0;
+  width: 100%;
+  overflow-x: hidden;
 }
 
 article {
